2009-02-27  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_http.erl: Added a workaround for inet:peername
	returning 'ebadf'

	* src/cyrsasl_digest.erl: Unquote backslash in DIGEST-MD5 quoted
	strings (EJAB-304)

	* src/tls/tls_drv.c: S2S connection with STARTTLS fails to Gtalk
	and recent Openfire (thanks to Philipp Hancke)(EJAB-877)

	* doc/guide.tex: No mention to the release date in ejabberd Guide
	or release notes. The date of an ejabberd release is determined by
	the date of the corresponding release announcement.

2009-02-23  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_c2s.erl: Do not call mod_caps:clear_caps, this previous
	optimization is too agressive and breaks PubSub/PEP standard behavior
	(EJAB-854)

2009-02-21  Badlop  <badlop@process-one.net>

 	* src/mod_muc/mod_muc_room.erl: Owner of a password protected room
 	must provide the password, like other participants (EJAB-867)

 	* src/mod_muc/mod_muc_log.erl: Prevent XSS in MUC logs by
 	linkifying only a few known protocols (EJAB-850)

 	* src/mod_roster.erl: When account is deleted, cancel presence
 	subscription for all roster items (EJAB-790)
 	* src/mod_roster_odbc.erl: Likewise

 	* src/mod_shared_roster.erl: Fix bug: a pending subscription
 	request, and later the requester added to the roster due to a
 	shared roster group, that request could neither be accepted or
 	rejected (thanks to Brian Cully)(EJAB-869)

 	* src/mod_pubsub/mod_pubsub.erl: The table pubsub_node in ejabberd
 	older than 2.0.2 had indexes for parentid and type. This is not
 	required since ejabberd 2.0.2, so those indexes can be
 	deleted. (EJAB-669)

 	* doc/Makefile: In Clean do not remove html. In new Distclean,
	remove also html.

 	* doc/Makefile: When cleaning, remove contributed_modules.tex

 	* doc/guide.tex: Provide only an example of language option
 	* doc/guide.html: Likewise

 	* doc/guide.tex: mod_muc can run in several nodes of cluster
 	* doc/guide.html: Likewise
