@@ -1,3 +1,12 @@
+2009-03-03  Christophe Romain <christophe.romain@process-one.net>
+
+	* src/mod_pubsub/mod_pubsub.erl: Add roster subscriptions handling
+	so on_sub_and_presence if fully supported.
+
+	* src/mod_pubsub/mod_pubsub.erl: Allow to send PEP events to all
+	connected ressources, even via s2s.
+	* src/mod_caps.erl: Likewise
+
 2009-02-27  Badlop  <badlop@process-one.net>
 
 	* src/web/ejabberd_http.erl: Added a workaround for inet:peername
